--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -42,6 +42,7 @@ h1{
     border-right: 1px solid var(--color-orange);
     border-bottom: 1px solid var(--color-orange);
     border-left: 1px solid var(--color-orange);
+    margin-bottom: 6rem;
 }
 .container{
     max-width: 330px;
